# test-hs

./: .gitignore  fourmolu.yaml  hls.json  test-hs.cabal
app/: Main.hs
